<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INBA"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:background="@color/colorSecondary"
        android:layout_below="@id/app_title"
        android:hint="Username"
        android:inputType="text"
        android:layout_marginTop="90dp"
        android:padding="40dp"
        />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:background="@color/colorSecondary"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_below="@id/username_edit_text"
        android:layout_marginTop="90dp"
        android:padding="40dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:layout_below="@id/password_edit_text"
        android:layout_marginTop="100dp"
        android:padding="30dp"
        android:background="@color/colorAccent"
        style="@style/navAdd.Btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="200dp"
        android:text="by TEAM XV"
        android:textColor="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:buttonTint="@color/colorAccent"
        android:text="Register New Account?"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent" />

</RelativeLayout>