...
        android:text="@string/change_theme"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:switchPadding="100dp"/>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="666dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@id/theme_switch"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="88dp"
...
