...
        android:text="@string/dashboard"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:ignore="TextSizeCheck" 
        android:textColor="@color/colorAccent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:layout_below="@+id/textTitle"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp" />

...
