

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="comp3350.inba.presentation.TransactionsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:onClick="textEnterDateOnClick"
            android:text="@string/enter_date"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <Spinner
            android:id="@+id/spinnerCategoryFilter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/editTextDate"
            android:gravity="end"
            android:textColor="@color/colorWhite"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:id="@+id/separatorTop"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <ListView
        android:id="@+id/listTransactions"
        style="@style/transactionList"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="350dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:stackFromBottom="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:id="@+id/separator"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:id="@+id/textTransactionCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="30dp"
            android:text="@string/transaction_category"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite" />

        <AutoCompleteTextView
            android:id="@+id/editTransactionCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/colorWhite"
            android:completionThreshold="0"
            android:inputType="textNoSuggestions"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textTransactionPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/transaction_price"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite" />

        <EditText
            android:id="@+id/editTransactionPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:autofillHints=""
            android:backgroundTint="@color/colorWhite"
            android:inputType="numberDecimal"
            android:textColor="@color/colorWhite" />

    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonTransactionDelete"
            style="@style/nav.Btn"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:enabled="false"
            android:onClick="buttonTransactionDeleteOnClick"
            android:text="@string/delete"
            android:textSize="20sp"
            android:drawableStart="@drawable/delete_icon"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/buttonTransactionCreate"
            style="@style/nav.Btn"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:enabled="true"
            android:onClick="buttonTransactionCreateOnClick"
            android:text="@string/create"
            android:textSize="20sp"
            android:drawableStart="@drawable/create_icon"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/buttonTransactionUpdate"
            style="@style/nav.Btn"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:enabled="false"
            android:onClick="buttonTransactionUpdateOnClick"
            android:text="@string/update"
            android:textSize="20sp"
            android:drawableStart="@drawable/update_icon"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/nav.Btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        app:menu="@menu/menu_bottom_nav_bar" />

</LinearLayout>
